# vibe-game

./: Cargo.toml  LICENSE  README.md  justfile
.astro/: settings.json
.github/workflows/: deploy.yml
assets/models/roots/: root_0.glb  root_1.glb  root_2.glb  root_3.glb  root_4.glb  root_splitter_0.glb  root_splitter_1.glb  root_splitter_2.glb  root_splitter_3.glb
assets/models/trees/: tree_0.glb  tree_0.tree_collider.json  tree_0_collider.json  tree_1.glb  tree_1.tree_collider.json  tree_10.glb  tree_10.tree_collider.json  tree_11.glb  tree_11.tree_collider.json  tree_11_collider.json  tree_2.glb  tree_2.tree_collider.json  tree_2_collider.json  tree_3.glb  tree_3.tree_collider.json  tree_3_collider.json  tree_4.glb  tree_4.tree_collider.json  tree_4_collider.json  tree_5.glb  tree_5.tree_collider.json  tree_6.glb  tree_6.tree_collider.json  tree_7.glb  tree_7.tree_collider.json  tree_8.glb  tree_8.tree_collider.json  tree_9.glb  tree_9.tree_collider.json
assets/models/trees_old/: tree_1.glb  tree_11.glb  tree_3.glb  (+6 more)
astro/: astro.config.mjs  package.json
bash-scripts/: build-release-wasm.sh
scripts/: README.md  batch_obj_to_gltf.old.py  batch_obj_to_gltf.py  batch_trees_obj_to_gltf.py  generate_8bit_music.py  generate_mud_texture.py  generate_stake_sound.py  generate_tree_root_particles.py  generate_trees.py  root_obj_to_gltf.py
src/: main.rs
src/assets/: levels.rs
src/game/: background_music_plugin.rs  bullet.rs  camera.rs  enemy.rs  explosion.rs  gui.rs  health.rs  mod.rs  network.rs  pause_menu_gui.rs  player.rs  skybox_plugin.rs  tree.rs
(+5 files in other folders)
